--- a/ThaiNovel_OCR_v3.ipynb
+++ b/ThaiNovel_OCR_v3.ipynb
@@ -78,13 +78,13 @@
         "colab_health_check()"
       ],
       "metadata": {
-        "id": "Ah66recQ82pe",
-        "outputId": "fcfb7a09-4ebe-4117-e8da-bcf838e881d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ah66recQ82pe",
+        "outputId": "ba0ea582-df27-43a5-8932-6a7c6410157c"
       },
-      "execution_count": 34,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +98,7 @@
             "BASE exists?: True\n",
             "RAW exists? : True\n",
             "📄 .txt files in RAW (1):\n",
-            "  - current_chapter.txt  (6773 bytes)\n",
+            "  - current_chapter.txt  (8770 bytes)\n",
             "🔐 OPENAI_API_KEY: set (**********GsqIQA)\n",
             "========================================\n",
             "✅ Ready to process!\n"
@@ -112,7 +112,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 41
         }
       ]
     },
@@ -161,9 +161,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_RWrHi-Zr9pV",
-        "outputId": "028de4c4-0a48-45e7-db69-96e14bb8fb52"
+        "outputId": "97641780-1d8e-443b-962d-dc6029930af9"
       },
-      "execution_count": 14,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,9 +268,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Qwt1E6bsAvI",
-        "outputId": "fcc56bc0-c164-4366-8069-29b5587f8950"
+        "outputId": "8dadd40f-5a2a-441a-cec7-fb84563efd4d"
       },
-      "execution_count": 31,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,9 +387,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DZdskcZ9sDdS",
-        "outputId": "e7b790dc-8921-45f2-b00b-35e5b53d365a"
+        "outputId": "8820d617-f7d1-4e33-d7ae-df6fd5ababec"
       },
-      "execution_count": 16,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,9 +461,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZhQVDdGTsRzC",
-        "outputId": "13d6148a-f83e-44d0-e13b-436aaa2e640a"
+        "outputId": "1c772481-0121-49ab-dc41-1c928b6a4630"
       },
-      "execution_count": 17,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -557,9 +557,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0HTXIqNCsUvm",
-        "outputId": "e9151da4-e59e-4319-8b12-051dd37e9a32"
+        "outputId": "6bfc8278-e52c-4750-d38b-3cbccace944a"
       },
-      "execution_count": 18,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -1016,9 +1016,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dQocnXzKWfVC",
-        "outputId": "fa8590e9-b014-4746-cc9e-d9e7080cc71f"
+        "outputId": "eabc4f64-59ff-452c-daeb-bc9660d3a215"
       },
-      "execution_count": 19,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -1104,9 +1104,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2w7mgSmjtWbs",
-        "outputId": "64f30f4d-db6b-48e6-f623-d8c946d14a9f"
+        "outputId": "41a94046-0ec8-4e2e-f6d7-d84198fa81c5"
       },
-      "execution_count": 20,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -1205,9 +1205,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9kM8TqqHtgKA",
-        "outputId": "1709ad98-7155-4eb5-b05a-369b0001fc9f"
+        "outputId": "736470c0-2f95-4f5a-ee33-0f93eee63f1c"
       },
-      "execution_count": 21,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -1657,9 +1657,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "inUR98QoXBv_",
-        "outputId": "499803b2-b017-4ae4-8fa0-0c8001ac8fa8"
+        "outputId": "87374f2b-eff4-4683-93fe-e7401ee33349"
       },
-      "execution_count": 22,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -1806,9 +1806,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bqbfvrs5uYJa",
-        "outputId": "dcd49613-e042-43b1-f1d7-dc1c98a68c4a"
+        "outputId": "e69c45b5-7d8a-4992-cdc9-4f13c498f38b"
       },
-      "execution_count": 23,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -1907,9 +1907,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DpviaRvnugCB",
-        "outputId": "7751e9dc-382d-4f65-f3dc-e00cd754574e"
+        "outputId": "d35c3d61-7bfc-445d-e987-4e3323093cbe"
       },
-      "execution_count": 24,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -2106,9 +2106,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EnxJQ_S-wVUM",
-        "outputId": "05770e68-3369-47ed-84d9-83b5708f624d"
+        "outputId": "6546eb9e-3a00-4282-d4c5-33fb07cbc5b1"
       },
-      "execution_count": 28,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -2121,16 +2121,16 @@
             "\n",
             "📒 Usage Log Summary (All time)\n",
             "==================================================\n",
-            "Total files         : 7\n",
-            "Total pages         : 15\n",
-            "Total tokens        : 13,597\n",
-            "Input tokens        : 8,843\n",
-            "Output tokens       : 4,754\n",
-            "Total cost (USD)    : $0.0042\n",
-            "Total cost (THB)    : ~0.15\n",
+            "Total files         : 28\n",
+            "Total pages         : 47\n",
+            "Total tokens        : 43,844\n",
+            "Input tokens        : 29,616\n",
+            "Output tokens       : 14,228\n",
+            "Total cost (USD)    : $0.0130\n",
+            "Total cost (THB)    : ~0.45\n",
             "Avg cost per page   : $0.0003\n",
             "Most used model     : gpt-4o-mini\n",
-            "Validation stats    : {'META_ANALYSIS': 5, 'PASS': 2}\n"
+            "Validation stats    : {'META_ANALYSIS': 21, 'PASS': 7}\n"
           ]
         }
       ]
@@ -2140,25 +2140,39 @@
       "source": [
         "from pathlib import Path\n",
         "\n",
-        "fname = \"current_chapter.txt\"   # ตั้งชื่อไฟล์กลางไว้เสมอ\n",
-        "processor = OCRProcessor(analyze_metadata=True)   # หรือ False ถ้าอยากประหยัดโทเคน\n",
-        "result = processor.process_file(Path(Config.RAW_OCR_DIR) / fname)\n",
+        "# 🔹 รายชื่อไฟล์ที่ต้องการประมวลผลชัดเจน 5 ไฟล์\n",
+        "filenames = [f\"current_chapter{i}.txt\" for i in range(1, 6)]\n",
         "\n",
+        "# 🔹 เปิด metadata analysis ถ้าต้องการรายละเอียดเยอะ\n",
+        "processor = OCRProcessor(analyze_metadata=True)   # หรือ False เพื่อลดค่าใช้จ่าย/โทเคน\n",
+        "\n",
+        "results = []\n",
+        "for fname in filenames:\n",
+        "    path = Path(Config.RAW_OCR_DIR) / fname\n",
+        "    if not path.exists():\n",
+        "        print(f\"❌ ไม่พบไฟล์: {path}\")\n",
+        "        continue\n",
+        "    res = processor.process_file(path)\n",
+        "    results.append(res)\n",
+        "\n",
+        "# 🔹 สรุปผลรวม\n",
         "print(\"\\n📊 Run Summary:\")\n",
-        "print(\"Success:\", result.get('success'))\n",
-        "if result.get('success'):\n",
-        "    print(\"Output file:\", result.get('cleaned_path'))\n",
-        "    print(\"Cost (USD):\", result.get('cost'))\n",
-        "    print(\"Tokens used:\", result.get('tokens'))"
+        "ok = sum(1 for r in results if r.get('success'))\n",
+        "print(f\"Success: {ok}/{len(filenames)}\")\n",
+        "for r in results:\n",
+        "    if r.get('success'):\n",
+        "        print(\" - Output:\", r.get('cleaned_path'),\n",
+        "              \"| Cost (USD):\", r.get('cost'),\n",
+        "              \"| Tokens:\", r.get('tokens'))"
       ],
       "metadata": {
         "id": "ZUmolxV3IQAb",
-        "outputId": "bfbd9ec3-1621-4e87-b024-7a61c16810f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "83adfb0b-7949-48d6-9eae-bd243922321d"
       },
-      "execution_count": 36,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -2170,7 +2184,7 @@
             "   🔍 Metadata analysis: ENABLED\n",
             "   📖 Multi-page file detected\n",
             "   📊 Found 3 pages\n",
-            "   📏 Total content: 2,762 chars (~2,072 tokens)\n",
+            "   📏 Total content: 3,374 chars (~2,530 tokens)\n",
             "   🚀 Processing all 3 pages in one batch...\n",
             "   ⚠️ Warning: ไม่พบผลลัพธ์สำหรับหน้า 1\n",
             "   ⚠️ Warning: ไม่พบผลลัพธ์สำหรับหน้า 2\n",
@@ -2179,20 +2193,20 @@
             "      Analyzing page 1...\n",
             "      Analyzing page 2...\n",
             "      Analyzing page 3...\n",
-            "   ✅ Metadata analysis complete: 3,065 tokens, $0.0007\n",
-            "   ✅ Saved: current_chapter_clean_20250902_104704.txt\n",
+            "   ✅ Metadata analysis complete: 3,277 tokens, $0.0008\n",
+            "   ✅ Saved: current_chapter_clean_20250902_135556.txt\n",
             "   📄 Pages: 3\n",
-            "   🔤 Tokens: 5,996\n",
-            "   ⏱ Time: 19.4s\n",
-            "   💰 Cost: $0.0017 (~0.06 บาท)\n",
+            "   🔤 Tokens: 6,639\n",
+            "   ⏱ Time: 42.0s\n",
+            "   💰 Cost: $0.0019 (~0.07 บาท)\n",
             "   📋 Validation: ✅0 ⚠️3 ❌0 (avg: 0.90)\n",
             "   🔍 Metadata analyzed: 3 pages\n",
             "\n",
             "📊 Run Summary:\n",
             "Success: True\n",
-            "Output file: /content/drive/MyDrive/Corpus_Books_OCR/cleaned/current_chapter_clean_20250902_104704.txt\n",
-            "Cost (USD): 0.0017386499999999998\n",
-            "Tokens used: 5996\n"
+            "Output file: /content/drive/MyDrive/Corpus_Books_OCR/cleaned/current_chapter_clean_20250902_135556.txt\n",
+            "Cost (USD): 0.0019318499999999997\n",
+            "Tokens used: 6639\n"
           ]
         }
       ]
