--- a/ThaiNovel_OCR_v3.ipynb
+++ b/ThaiNovel_OCR_v3.ipynb
@@ -82,9 +82,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ah66recQ82pe",
-        "outputId": "ba0ea582-df27-43a5-8932-6a7c6410157c"
+        "outputId": "c4ee99de-f387-470f-e70e-9c78bb7e640c"
       },
-      "execution_count": 41,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,8 +97,9 @@
             "RAW_OCR_DIR : /content/drive/MyDrive/Corpus_Books_OCR/raw_ocr\n",
             "BASE exists?: True\n",
             "RAW exists? : True\n",
-            "📄 .txt files in RAW (1):\n",
-            "  - current_chapter.txt  (8770 bytes)\n",
+            "📄 .txt files in RAW (2):\n",
+            "  - current_chapter1.txt  (10127 bytes)\n",
+            "  - current_chapter2.txt  (13362 bytes)\n",
             "🔐 OPENAI_API_KEY: set (**********GsqIQA)\n",
             "========================================\n",
             "✅ Ready to process!\n"
@@ -112,7 +113,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 60
         }
       ]
     },
@@ -2106,9 +2107,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EnxJQ_S-wVUM",
-        "outputId": "6546eb9e-3a00-4282-d4c5-33fb07cbc5b1"
+        "outputId": "773bc9d5-c8d5-40c2-cf14-c5a027ecab11"
       },
-      "execution_count": 53,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
@@ -2121,16 +2122,16 @@
             "\n",
             "📒 Usage Log Summary (All time)\n",
             "==================================================\n",
-            "Total files         : 28\n",
-            "Total pages         : 47\n",
-            "Total tokens        : 43,844\n",
-            "Input tokens        : 29,616\n",
-            "Output tokens       : 14,228\n",
-            "Total cost (USD)    : $0.0130\n",
-            "Total cost (THB)    : ~0.45\n",
+            "Total files         : 71\n",
+            "Total pages         : 113\n",
+            "Total tokens        : 115,231\n",
+            "Input tokens        : 78,116\n",
+            "Output tokens       : 37,115\n",
+            "Total cost (USD)    : $0.0340\n",
+            "Total cost (THB)    : ~1.19\n",
             "Avg cost per page   : $0.0003\n",
             "Most used model     : gpt-4o-mini\n",
-            "Validation stats    : {'META_ANALYSIS': 21, 'PASS': 7}\n"
+            "Validation stats    : {'META_ANALYSIS': 54, 'PASS': 17}\n"
           ]
         }
       ]
@@ -2138,53 +2139,75 @@
     {
       "cell_type": "code",
       "source": [
+        "# ============================================\n",
+        "# 📌 Block: Run me\n",
+        "# ใช้สำหรับประมวลผลไฟล์ OCR หลายไฟล์ตามที่ระบุ\n",
+        "# - ใส่ชื่อไฟล์ใน RAW_OCR_DIR (Google Drive)\n",
+        "# - โค้ดจะวนลูปรันทีละไฟล์\n",
+        "# - แสดงผลสรุป และเซฟไฟล์ที่ clean แล้วไปไว้ใน CLEANED_DIR\n",
+        "# ============================================\n",
+        "\n",
         "from pathlib import Path\n",
         "\n",
-        "# 🔹 รายชื่อไฟล์ที่ต้องการประมวลผลชัดเจน 5 ไฟล์\n",
-        "filenames = [f\"current_chapter{i}.txt\" for i in range(1, 6)]\n",
+        "# 🔹 ระบุชื่อไฟล์ที่ต้องการประมวลผล (แก้ไขได้เอง)\n",
+        "filenames = [\n",
+        "    \"current_chapter1.txt\",\n",
+        "    \"current_chapter2.txt\",\n",
+        "    \"current_chapter3.txt\"\n",
+        "]\n",
         "\n",
-        "# 🔹 เปิด metadata analysis ถ้าต้องการรายละเอียดเยอะ\n",
-        "processor = OCRProcessor(analyze_metadata=True)   # หรือ False เพื่อลดค่าใช้จ่าย/โทเคน\n",
+        "# 🔹 สร้าง OCRProcessor (เลือก analyze_metadata=True ถ้าอยากวิเคราะห์ metadata ด้วย)\n",
+        "processor = OCRProcessor(analyze_metadata=True)\n",
         "\n",
         "results = []\n",
+        "\n",
+        "# 🔹 วนลูปประมวลผลทีละไฟล์\n",
         "for fname in filenames:\n",
         "    path = Path(Config.RAW_OCR_DIR) / fname\n",
         "    if not path.exists():\n",
         "        print(f\"❌ ไม่พบไฟล์: {path}\")\n",
         "        continue\n",
+        "\n",
+        "    print(f\"\\n▶️ Processing: {fname}\")\n",
         "    res = processor.process_file(path)\n",
         "    results.append(res)\n",
         "\n",
-        "# 🔹 สรุปผลรวม\n",
+        "    if res.get(\"success\"):\n",
+        "        print(\"   ✅ Saved:\", res[\"cleaned_path\"])\n",
+        "    else:\n",
+        "        print(\"   ❌ Failed:\", res.get(\"error\", \"unknown\"))\n",
+        "\n",
+        "# 🔹 สรุปผลการรัน\n",
         "print(\"\\n📊 Run Summary:\")\n",
-        "ok = sum(1 for r in results if r.get('success'))\n",
+        "ok = sum(1 for r in results if r.get(\"success\"))\n",
         "print(f\"Success: {ok}/{len(filenames)}\")\n",
         "for r in results:\n",
-        "    if r.get('success'):\n",
-        "        print(\" - Output:\", r.get('cleaned_path'),\n",
-        "              \"| Cost (USD):\", r.get('cost'),\n",
-        "              \"| Tokens:\", r.get('tokens'))"
+        "    if r.get(\"success\"):\n",
+        "        print(\" - Output:\", r[\"cleaned_path\"],\n",
+        "              \"| Cost (USD):\", res[\"cost\"],\n",
+        "              \"| Tokens:\", res[\"tokens\"])"
       ],
       "metadata": {
         "id": "ZUmolxV3IQAb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "83adfb0b-7949-48d6-9eae-bd243922321d"
+        "outputId": "e9ad0415-5569-45ca-eecc-7b2b46d5034b"
       },
-      "execution_count": 59,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "✅ OpenAI client ready (Model: gpt-4o-mini)\n",
+            "❌ ไม่พบไฟล์: /content/drive/MyDrive/Corpus_Books_OCR/raw_ocr/current_chapter1.txt\n",
             "\n",
-            "📄 Processing: current_chapter.txt\n",
+            "📄 Processing: current_chapter2.txt\n",
             "   🔍 Metadata analysis: ENABLED\n",
             "   📖 Multi-page file detected\n",
             "   📊 Found 3 pages\n",
-            "   📏 Total content: 3,374 chars (~2,530 tokens)\n",
+            "   📏 Total content: 3,544 chars (~2,658 tokens)\n",
             "   🚀 Processing all 3 pages in one batch...\n",
             "   ⚠️ Warning: ไม่พบผลลัพธ์สำหรับหน้า 1\n",
             "   ⚠️ Warning: ไม่พบผลลัพธ์สำหรับหน้า 2\n",
@@ -2193,20 +2216,45 @@
             "      Analyzing page 1...\n",
             "      Analyzing page 2...\n",
             "      Analyzing page 3...\n",
-            "   ✅ Metadata analysis complete: 3,277 tokens, $0.0008\n",
-            "   ✅ Saved: current_chapter_clean_20250902_135556.txt\n",
+            "   ✅ Metadata analysis complete: 3,450 tokens, $0.0008\n",
+            "   ✅ Saved: current_chapter2_clean_20250902_165527.txt\n",
             "   📄 Pages: 3\n",
-            "   🔤 Tokens: 6,639\n",
-            "   ⏱ Time: 42.0s\n",
-            "   💰 Cost: $0.0019 (~0.07 บาท)\n",
+            "   🔤 Tokens: 7,189\n",
+            "   ⏱ Time: 28.3s\n",
+            "   💰 Cost: $0.0021 (~0.07 บาท)\n",
             "   📋 Validation: ✅0 ⚠️3 ❌0 (avg: 0.90)\n",
             "   🔍 Metadata analyzed: 3 pages\n",
             "\n",
+            "📄 Processing: current_chapter3.txt\n",
+            "   🔍 Metadata analysis: ENABLED\n",
+            "   📖 Multi-page file detected\n",
+            "   📊 Found 4 pages\n",
+            "   📏 Total content: 4,299 chars (~3,224 tokens)\n",
+            "   🚀 Processing all 4 pages in one batch...\n",
+            "   ⚠️ Warning: ไม่พบผลลัพธ์สำหรับหน้า 1\n",
+            "   ⚠️ Warning: ไม่พบผลลัพธ์สำหรับหน้า 2\n",
+            "   ⚠️ Warning: ไม่พบผลลัพธ์สำหรับหน้า 3\n",
+            "   ⚠️ Warning: ไม่พบผลลัพธ์สำหรับหน้า 4\n",
+            "   🔍 Analyzing metadata for each page...\n",
+            "      Analyzing page 1...\n",
+            "      Analyzing page 2...\n",
+            "      Analyzing page 3...\n",
+            "      Analyzing page 4...\n",
+            "   ✅ Metadata analysis complete: 4,523 tokens, $0.0011\n",
+            "   ✅ Saved: current_chapter3_clean_20250902_165636.txt\n",
+            "   📄 Pages: 4\n",
+            "   🔤 Tokens: 9,117\n",
+            "   ⏱ Time: 46.3s\n",
+            "   💰 Cost: $0.0027 (~0.10 บาท)\n",
+            "   📋 Validation: ✅0 ⚠️4 ❌0 (avg: 0.90)\n",
+            "   🔍 Metadata analyzed: 4 pages\n",
+            "❌ ไม่พบไฟล์: /content/drive/MyDrive/Corpus_Books_OCR/raw_ocr/current_chapter4.txt\n",
+            "❌ ไม่พบไฟล์: /content/drive/MyDrive/Corpus_Books_OCR/raw_ocr/current_chapter5.txt\n",
+            "\n",
             "📊 Run Summary:\n",
-            "Success: True\n",
-            "Output file: /content/drive/MyDrive/Corpus_Books_OCR/cleaned/current_chapter_clean_20250902_135556.txt\n",
-            "Cost (USD): 0.0019318499999999997\n",
-            "Tokens used: 6639\n"
+            "Success: 2/5\n",
+            " - Output: /content/drive/MyDrive/Corpus_Books_OCR/cleaned/current_chapter2_clean_20250902_165527.txt | Cost (USD): 0.00212775 | Tokens: 7189\n",
+            " - Output: /content/drive/MyDrive/Corpus_Books_OCR/cleaned/current_chapter3_clean_20250902_165636.txt | Cost (USD): 0.00273465 | Tokens: 9117\n"
           ]
         }
       ]
